--- a/project/config/packages/command_chains.yaml
+++ b/project/config/packages/command_chains.yaml
@@ -1,6 +1,10 @@
 chain_commands:
   chains:
-    test:
-      command: ''
-      priority: 0
-#      args: {}
+    test1:
+      commands:
+        'foo:command': ~
+        'bar:command': ~
+    test2:
+      commands:
+        'bar:command': ~
+        'foo:command': ~
