--- a/project/config/packages/monolog.yaml
+++ b/project/config/packages/monolog.yaml
@@ -1,6 +1,7 @@
 monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
+        - chain_commands
 
 when@dev:
     monolog:
@@ -10,6 +11,10 @@ when@dev:
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
                 channels: ["!event"]
+            chain_commands:
+                type: stream
+                path: "%kernel.logs_dir%/chain_commands.log"
+                channels: [ "!chain_commands" ]
             # uncomment to get logging in your browser
             # you may have to allow bigger header sizes in your Web server configuration
             #firephp:
