--- a/project/config/packages/command_chains.yaml
+++ b/project/config/packages/command_chains.yaml
@@ -1,5 +1,9 @@
 chain_commands:
   chains:
+    default:
+      commands:
+        'foo:command': ~
+        'bar:command': ~
     test1:
       commands:
         'foo:command': ~
