--- a/project/config/packages/monolog.yaml
+++ b/project/config/packages/monolog.yaml
@@ -26,7 +26,7 @@ when@dev:
             console:
                 type: console
                 process_psr_3_messages: false
-                channels: ["!event", "!doctrine", "!console"]
+                channels: ["!chain_commands"]
 
 when@test:
     monolog:
