--- a/bundle/CommandChainBundle/composer.json
+++ b/bundle/CommandChainBundle/composer.json
@@ -24,6 +24,7 @@
         "symfony/phpunit-bridge": "^5.4",
         "symfony/console": "^5.4",
         "symfony/http-kernel": "^5.4",
+        "symfony/monolog-bundle": "^3.0.0",
         "symfony/event-dispatcher": "^5.4",
         "symfony/var-dumper": "^5.4"
     }
