--- a/project/config/services.yaml
+++ b/project/config/services.yaml
@@ -21,10 +21,10 @@ services:
             - '../src/Kernel.php'
 
     Ezi\CommandChainBundle\Service\ChainBuilder:
-        $logger: "@logger"
+        $logger: "@monolog.logger"
 
     Ezi\CommandChainBundle\Service\CommandChain:
-        $logger: "@logger"
+        $logger: "@monolog.logger"
 
     #monolog.handler.chain_commands
     # add more service definitions when explicit configuration is needed
