Refactoring chain adding new methods

--- a/project/config/packages/command_chains.yaml
+++ b/project/config/packages/command_chains.yaml
@@ -1,14 +1,5 @@
 chain_commands:
   chains:
-    default:
+    'foo:hello':
       commands:
-        'foo:command': ~
-        'bar:command': ~
-    'command:chain':
-      commands:
-        'foo:command': ~
-        'bar:command': ~
-    test2:
-      commands:
-        'bar:command': ~
-        'foo:command': ~
+        'bar:hi': ~
